Reduce warnings - cleanup